* August 24, 2010 - Closing an issue with quoting colors... Issue #11 [hcatlin]
* August 17, 2010 - Added compositing! [hcatlin]
* August 17, 2010 - Moved a lot of the command logic into the CommandBuilder. This way, we don't have to repeat things like checking to see if a MOGRIFY_COMMAND is valid or not. Also added some new tests for some behaviour I noticed that wasn't specifically being tested for. Depricated the "+" method as the API was clunky. Moved to "<<" with slightly different behaviour. Image.new(path) no longer throws an error if the 'path' isn't valid. Allows us to create new images (copies, etc), however Image.open(path) will throw an Invalid error if the file stinks. Please use valid? if you want to find out if an image is recognized. [hcatlin]
* August 17, 2010 - Merged in changes to allow subexec to run on 1.8.7.
* August 16, 2010 - Merged in a bugfix change from kepi that makes 'dashed' commands (like "auto-correct") work well with the method_missing overrides. I made some changes to that patch that included simplifying the tests and also decreasing the size of the test images again. Sorry cute cats.... but your bits aren't needed!
* July 29, 2010 - Made the test images much, much smaller. Now, the size of the gem has gone from 1,080kb to 68kb. Should save a bunch of bandwidth with bundler deploys. [hcatlin]
* July 29, 2010 - Merged in my changes to allow it to work under 1.8. subex is only used in 1.9.2.