@@ -1,3 +1,4 @@
+* August 28, 2010 - Just quote all arguements now.
 * August 24, 2010 - Closing an issue with quoting colors... Issue #11 [hcatlin]
 * August 17, 2010 - Added compositing! [hcatlin]
 * August 17, 2010 - Moved a lot of the command logic into the CommandBuilder. This way, we don't have to repeat things like checking to see if a MOGRIFY_COMMAND is valid or not. Also added some new tests for some behaviour I noticed that wasn't specifically being tested for. Depricated the "+" method as the API was clunky. Moved to "<<" with slightly different behaviour. Image.new(path) no longer throws an error if the 'path' isn't valid. Allows us to create new images (copies, etc), however Image.open(path) will throw an Invalid error if the file stinks. Please use valid? if you want to find out if an image is recognized. [hcatlin]
